--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -11,19 +11,18 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
-
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Java version
-        uses: actions/setup-java@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: '17'
-
+          cache: 'maven'
       - name: Build with Maven
-        run: mvn clean install
-
+        run: mvn clean test
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
