--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup jdk-17
@@ -23,6 +24,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build with Maven
+        working-directory: ../backend/recipe-finder
         run: mvn clean test
 
 # on:
