--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches:
       - main 
+
+defaults:
+  run:
+    working-directory: scripts
 jobs:
   build:
     runs-on: ubuntu-latest
