--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -11,9 +11,9 @@ on:
     branches:
       - main 
 
-defaults:
-  run:
-    working-directory: scripts
+# defaults:
+#   run:
+#     working-directory: scripts
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build with Maven
-        working-directory: ../backend/recipe-finder
+        working-directory: /backend/recipe-finder
         run: mvn clean test
 
 # on:
