--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -28,7 +28,7 @@ jobs:
           java-version: '17'
           cache: 'maven'
       - name: Build with Maven
-        working-directory: /backend/recipe-finder
+        working-directory: backend/recipe-finder
         run: mvn clean test
 
 # on:
