--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -30,7 +30,16 @@ jobs:
       - name: Build with Maven
         working-directory: ./backend/recipe-finder
         run: mvn clean test
-
+  deploy:
+      runs-on: ubuntu-latest
+      permissions:
+        id-token: write
+        contents: read
+      steps:
+        - name: Azure Login
+          uses: azure/login@v1
+          with:
+            creds: ${{secrets.AZURE_CREDS }}
 # on:
 #   push:
 #     branches:
