--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -39,7 +39,7 @@ jobs:
         - name: Azure Login
           uses: azure/login@v1
           with:
-            creds: ${{secrets.AZURE_CREDS }}
+            creds: ${{secrets.AZUREAPPSERVICE_PUBLISHPROFILE_360ADE5CE36444FE9A09F2321F2B652B }}
 # on:
 #   push:
 #     branches:
