--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -34,7 +34,9 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/backend/recipe-finder/target/*.jar'
+          path: 'backend/recipe-finder/target/*.jar'
+          
+#           ${{ github.workspace }}/
 
   deploy:
     runs-on: ubuntu-latest
