--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -34,9 +34,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: backend/recipe-finder/target/*.jar
+          path: '${{ github.workspace }}/backend/recipe-finder/target/*.jar'
           
-#           ${{ github.workspace }}/
 
   deploy:
     runs-on: ubuntu-latest
