--- a/.github/workflows/main_kg-app-firstazure.yml
+++ b/.github/workflows/main_kg-app-firstazure.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
+          working-directory: backend/recipe-finder
           path: '${{ github.workspace }}/target/*.jar'
           
 
